--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,31 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is an Ultimate Player app. 
 
-Things you may want to cover:
+This is an app to assist in your NBA fantasy league. 
 
-* Ruby version
+Deployed Application
 
-* System dependencies
+ultimateplayers.herokuapp.com
 
-* Configuration
+Ruby Version
 
-* Database creation
+Ruby '2.1.2'
 
-* Database initialization
+System dependencies
 
-* How to run the test suite
+Rails '4.2.0'
 
-* Services (job queues, cache servers, search engines, etc.)
+PostgreSQL '9.4.0'
 
-* Deployment instructions
+Languages Used
 
-* ...
+Ruby on Rails
 
+Javascript
 
-Please feel free to use a different markup language if you do not plan to run
+JQuery
+
+AngularJS
+
 <tt>rake doc:app</tt>.
